--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "expo": "^53.0.6",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.0",
