--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.9.0",
     "expo": "^53.0.6",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "lottie-ios": "^4.5.1",
