--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-firebase/app": "^22.2.0",
@@ -17,9 +18,11 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.9.0",
     "expo": "^53.0.6",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
