--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.9.0",
     "expo": "^53.0.6",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.6",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-modules-core": "^2.3.13",
+    "expo-notifications": "~0.31.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
     "lottie-ios": "^4.5.1",
@@ -41,8 +46,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
