--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@babel/runtime": "^7.27.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "8.3.0",
-    "@react-native-firebase/app": "^22.2.0",
-    "@react-native-firebase/messaging": "^22.2.0",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/messaging": "^19.0.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -21,11 +22,12 @@
     "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.9.0",
     "expo": "^53.0.6",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.7.3",
+    "firebase": "^11.8.1",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
@@ -41,8 +43,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
