--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-firebase/database": "^22.2.0",
+    "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-firebase/messaging": "^22.2.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
